[tool.poetry]
name = "contextual retrieval"
version = "0.1.0"
description = ""
authors = ["Abdullah Alzariqi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
voyageai = "^0.3.2"
langchain-community = "^0.3.12"
beautifulsoup4 = "^4.12.3"
pymupdf = "^1.25.1"
lxml = "^5.3.0"
readability-lxml = "^0.8.1"
lxml-html-clean = "^0.4.1"
langchain-text-splitters = "^0.3.4"
transformers = "^4.47.1"
pinecone = "^5.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
